data/derived/sp14/progs/unify/prog0997.ml.out
Characters 116-118:
  | Cosine i -> cos (pi * eval (i, x, y))
                     ^^
Error: This expression has type float but an expression was expected of type
         int
